fix logos fking again

--- a/test/Views/Home/PostInternalPage.cshtml
+++ b/test/Views/Home/PostInternalPage.cshtml
@@ -57,7 +57,7 @@
     <div class="row" style="background:#EEEEEE;">
         <div class="col-lg-3">
 
-            <img src="~/content/images/USAID.png" style="height:100%" class="img-fluid" alt="Responsive image">
+            <img src="~/content/images/USAID.png" style="margin-left:10px; margin-top:10px;" class="img-fluid" alt="Responsive image">
         </div>
 
         <div class="col-md-7">
