--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -122,7 +122,7 @@ a {
 
 @media only screen and (max-width: 1000px) {
     #toggle_button {
-        float:right;
+        right:0px;
     }
 
     .main-card-size {
