--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -188,7 +188,7 @@
 
             </div>
         </div>
-        <nav class="navbar navbar-expand-lg navbar-toggleable-sm navbar-light" style="background: #2791B6;">
+        <nav class="navbar navbar-expand-lg navbar-toggleable-sm navbar-light" style="background: #2791B6">
 
             <div class="col-md-3"></div>
 
@@ -196,11 +196,15 @@
                 <div class="row">
                     <div class="container">
                         <div class="container-fluid">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                                    aria-expanded="false" aria-label="Toggle navigation" id="toggle_button">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                            <div class="navbar-collapse collapse justify-content-between">
+                            <div class="row justify-content-end">
+                                <div style="width:100px; height:50px;" id="toggleButtonDiv">
+                                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                                            aria-expanded="false" aria-label="Toggle navigation" id="toggle_button">
+                                        <span class="navbar-toggler-icon"></span>
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="navbar-collapse collapse justify-content-between" id="headerNavContent">
                                 <ul class="navbar-nav ">
                                     <li class="nav-item">
                                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
@@ -211,7 +215,7 @@
                                                                         line-height: 23px;
                                                                         letter-spacing: -.03em;
                                                                         font-feature-settings: 'case' on;
-                                                                        text-align: left;
+                                                                        text-align: right;
                                                                         color:#F8BF0C;">
                                                 @SharedLocalizer["Home"]
                                             </p>
@@ -226,7 +230,7 @@
                                                                         line-height: 23px;
                                                                         letter-spacing: -.03em;
                                                                         font-feature-settings: 'case' on;
-                                                                        text-align: left;
+                                                                        text-align: right;
                                                                         color:white;
                                                                         margin-left:40px">@SharedLocalizer["AboutUs"]</p>
                                         </a>
@@ -240,7 +244,7 @@
                                                                         line-height: 23px;
                                                                         letter-spacing: -.03em;
                                                                         font-feature-settings: 'case' on;
-                                                                        text-align: left;
+                                                                        text-align: right;
                                                                         color:white;
                                                                         margin-left:40px">@SharedLocalizer["Contacts"]</p>
                                         </a>
@@ -254,7 +258,7 @@
                                                                         line-height: 23px;
                                                                         letter-spacing: -.03em;
                                                                         font-feature-settings: 'case' on;
-                                                                        text-align: left;
+                                                                        text-align: right;
                                                                         color:white;
                                                                         margin-left:40px">@SharedLocalizer["FAQ"]</p>
                                         </a>
