--- a/test/wwwroot/css/site.css
+++ b/test/wwwroot/css/site.css
@@ -119,12 +119,12 @@ a {
     background-size: 20px;
 }
 
+#toggleButtonDiv{
+    display:none;
+}
+
 
 @media only screen and (max-width: 1000px) {
-    #toggle_button {
-        right:0px;
-    }
-
     .main-card-size {
         width: 100%;
         height: 50vw;
@@ -136,12 +136,12 @@ a {
         height: 50vw;
         object-fit: fill;
     }
+    #toggleButtonDiv {
+        display: block;
+    }
 }
 
 @media only screen and (max-width: 600px) {
-    #toggle_button {
-        margin-left: 150px;
-    }
 
     #mainPageP {
         margin-left: 40px;
@@ -164,7 +164,7 @@ a {
     }
 
     .categoriesRow {
-        justify-content:center;
+        justify-content: center;
     }
 
     .main-card-size {
@@ -178,5 +178,10 @@ a {
         height: 50vw;
         object-fit: fill;
     }
+
+    #toggleButtonDiv {
+        display: block;
+    }
+}
 
 }
