open informations from internal page redirect button in new tab

--- a/test/Views/Home/PostInternalPage.cshtml
+++ b/test/Views/Home/PostInternalPage.cshtml
@@ -34,7 +34,7 @@
                              </div>
                             <h5 class="card-title  text-center" style="margin-top:30px;">@Model.Post.GeorgianTitle</h5>
                             <p class="textFont" style="margin-top:30px;">@Html.Raw(Model.Post.GeorgianDescription)</p>
-                            <a href="@Model.Post.RedirectUrl" class="btn btn-primary"> იხილეთ ორგანიზაციის გვერდი</a>
+                            <a href="@Model.Post.RedirectUrl" class="btn btn-primary" target="_blank"> იხილეთ ორგანიზაციის გვერდი</a>
                         </div>
                     </div>
                 }
@@ -46,7 +46,7 @@
                              </div>
                             <h5 class="card-title  text-center" style="margin-top:30px;">@Model.Post.UkrainianTitle</h5>
                             <p class="textFont" style="margin-top:30px;">@Html.Raw(Model.Post.UkrainianDescription)</p>
-                            <a href="@Model.Post.RedirectUrl" class="btn btn-primary">Перейти на сторінку організації</a>
+                            <a href="@Model.Post.RedirectUrl" class="btn btn-primary" target="_blank">Перейти на сторінку організації</a>
                         </div>
                     </div>
                 }
