--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -31,7 +31,6 @@
         font-feature-settings: 'case' on;
         text-align: left;
         color: white;
-
     }
 </style>
 
@@ -46,11 +45,11 @@
                     <div class="row activeCategory">
                         @if (Model.Culture == "uk")
                         {
-                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
                         }
                     </div>
                 }
@@ -59,11 +58,11 @@
                     <div class="row categoryItem">
                         @if (Model.Culture == "uk")
                         {
-                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryUkrainianName</p></a>
                         }
                         else
                         {
-                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
+                            <a style="text-decoration: none; padding-left: 50px" href="@Url.Action("Index", "Home", new {category = @category.Id, page = Model.Pager.CurrentPage})"><p class="textStyle">@category.CategoryGeorgianName</p></a>
                         }
                     </div>
                 }
@@ -139,6 +138,98 @@
                 }
                 else
                 {
+                    @if (Model != null && Model.Posts != null)
+                    {
+
+                        <div class="row" id="categoriesRow">
+
+                            @foreach (var post in @Model.Posts)
+                            {
+
+                                <div class="card-transparent" style="width: 16rem;">
+                                    <a href="@Url.Action("PostInternalPage", "Home", new { id = post.Id})" style=" text-decoration: none;">
+                                        <img class="card-img-top" src="data:image/png;base64,@post.ThumbnailBase64" alt="Card image cap" style="width:232px;height:146px;">
+                                        <div class="card-body">
+                                            @if (Model.Culture == "uk")
+                                            {
+                                                <p class="textFont"><b>@post.UkrainianTitle</b></p>
+                                            }
+                                            else
+                                            {
+                                                <p class="textFont"><b>@post.GeorgianTitle</b></p>
+                                            }
+                                        </div>
+                                    </a>
+                                </div>
+                            }
+                        </div>
+                    }
+                    @if (Model == null || Model.Posts == null)
+                    {
+
+                        <div style="text-align:center; width:100%; padding-bottom:10px;">
+                            ჩანაწერები არ მოიძებნა
+                        </div>
+
+                    }
+                    @if (Model != null && Model.Posts != null)
+                    {
+                        <nav aria-label="Page navigation example" style="margin:15px;">
+                            <!-- pager -->
+                    <div class="container">
+                                @if (Model.Pager.EndPage > 1)
+                                {
+                                    <ul class="pagination">
+                                        @if (Model.Pager.CurrentPage >= 1)
+                                        {
+                                            <li class="page-item">
+                                                <a class="page-link" href="@Url.Action("Index",
+                                                                  new { category = Model.ChosenCategoryId, page = Model.Pager.CurrentPage
+                                                                  })" value="@(Model.Pager.CurrentPage)" aria-label="Previous">
+                                                    <span aria-hidden="true">«</span>
+                                                    <span class="sr-only">Previous</span>
+                                                </a>
+                                            </li>
+                                            <li>
+                                            </li>
+                                        }
+
+                                        @for (var pageC = Model.Pager.StartPage; pageC <= Model.Pager.EndPage; pageC++)
+                                        {
+                                            <li class="page-item @(pageC - 1 == Model.Pager.CurrentPage ? " active" : "" )">
+                                                <a class="page-link" href="@Url.Action("Index",
+                                                                  new {  category = Model.ChosenCategoryId, page = pageC
+                                                                  })" value="@(pageC)">@(pageC)</a>
+                                            </li>
+                                        }
+
+                                        @if (Model.Pager.CurrentPage < Model.Pager.TotalPages)
+                                        {
+                                            <li class="page-item">
+                                                <a class="page-link" href="@Url.Action("Index",
+                                                                  new { category = Model.ChosenCategoryId,  page = (Model.Pager.CurrentPage + 2)
+                                                                  })" value="@(Model.Pager.StartPage + 2)" aria-label="Next">
+                                                    <span aria-hidden="true">»</span>
+                                                    <span class="sr-only">Next</span>
+                                                </a>
+                                            </li>
+                                        }
+                                    </ul>
+                                }
+                            </div>
+                        </nav>
+                    }
+
+
+
+
+
+
+@*
+
+
+
+
                     <div class="row" id="categoriesRow">
 
                         @foreach (var post in @Model.Posts)
@@ -160,7 +251,7 @@
                                 </a>
                             </div>
                         }
-                    </div>
+                    </div>*@
                 }
             </div>
 
@@ -189,7 +280,7 @@
                         color: #626262;">ვებგვერდზე განთავსებული ინფორმაციის მოძიება და შეკრება შესაძლებელი გახდა ამერიკელი ხალხის გულუხვი დახმარების წყალობით, ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID) დაფინანსებით. ვებგვერდზე განთავსებულ მასალაზე პასუხისმგებელია მხოლოდ საინიციატივო ჯგუფი და შესაძლოა არ გამოხატავდეს ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID), აღმოსავლეთ-დასავლეთის მართვის ინსტიტუტის (EWMI), ან ამერიკის შეერთებული შტატების მთავრობის შეხედულებებს.</p>
         </div>
         <div class="col-md-2 justify-content-center">
-            <p  style="font-family: 'Roboto';
+            <p style="font-family: 'Roboto';
                         font-style: normal;
                         font-weight: 400;
                         font-size: 10px;
@@ -207,10 +298,10 @@
 
 
 <script>
-   
-    
+
+
      window.onload = function() {
       $('#load').hide();
     };
-    
+
 </script>
