redirect to english post when british flag is clicked

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 
 
 
-    
+
 
     <link rel="shortcut icon" href="~/favicon.ico" />
     <title>Dopomoga</title>
@@ -35,7 +35,7 @@
 </head>
 <body style="height: 100%">
 
-    
+
     <div id="load"></div>
     @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
     @inject Microsoft.Extensions.Options.IOptions<Microsoft.AspNetCore.Builder.RequestLocalizationOptions> locOptions
@@ -80,7 +80,7 @@
         </div>
         <div class="row" style="height:50px; background: #2791B6">
             <div class="d-flex justify-content-end">
-               
+
 
                 <div style="width:25px; height:25px;
                                             margin-top:12px; margin-right:5px; cursor:pointer"
@@ -95,7 +95,7 @@
                                                     success: function () {
                                                         location.reload();
                                                     },
-                                                    error: function () { 
+                                                    error: function () {
                                                         location.reload();
                                                     }
                                                 });
@@ -125,7 +125,7 @@
 
                 <div style="width:25px; height:25px;margin-top:12px;float:right; margin-right:5px;  cursor:pointer"
                      onclick="
-                                    
+
                                                 $('#load').show();
                                                 $.ajax({
                                                     type: 'POST',
@@ -133,7 +133,7 @@
                                                     contentType: 'application/json; charset=utf-8',
                                                     data: { culture: 'en' },
                                                     dataType: 'json',
-                                                    success: function() { 
+                                                    success: function() {
                                                         location.reload();
                                                     },
                                                     error: function () {
@@ -161,26 +161,26 @@
 
                 </div>
 
-                 <div style="width:25px; height:25px; margin-right:30px; margin-top:12px; cursor:pointer;"
-                     onclick=" ">
+                <div style="width:25px; height:25px; margin-right:30px; margin-top:12px; cursor:pointer;"
+                     onclick="window.location.href = '@Url.Action("PostInternalPage", "Home", new { id = 250})'">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Layer_1" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                    <circle style="fill:#F0F0F0;" cx="256" cy="256" r="256"/>
+                    <circle style="fill:#F0F0F0;" cx="256" cy="256" r="256" />
                     <g>
-	                    <path style="fill:#0052B4;" d="M52.92,100.142c-20.109,26.163-35.272,56.318-44.101,89.077h133.178L52.92,100.142z"/>
-	                    <path style="fill:#0052B4;" d="M503.181,189.219c-8.829-32.758-23.993-62.913-44.101-89.076l-89.075,89.076H503.181z"/>
-	                    <path style="fill:#0052B4;" d="M8.819,322.784c8.83,32.758,23.993,62.913,44.101,89.075l89.074-89.075L8.819,322.784L8.819,322.784   z"/>
-	                    <path style="fill:#0052B4;" d="M411.858,52.921c-26.163-20.109-56.317-35.272-89.076-44.102v133.177L411.858,52.921z"/>
-	                    <path style="fill:#0052B4;" d="M100.142,459.079c26.163,20.109,56.318,35.272,89.076,44.102V370.005L100.142,459.079z"/>
-	                    <path style="fill:#0052B4;" d="M189.217,8.819c-32.758,8.83-62.913,23.993-89.075,44.101l89.075,89.075V8.819z"/>
-	                    <path style="fill:#0052B4;" d="M322.783,503.181c32.758-8.83,62.913-23.993,89.075-44.101l-89.075-89.075V503.181z"/>
-	                    <path style="fill:#0052B4;" d="M370.005,322.784l89.075,89.076c20.108-26.162,35.272-56.318,44.101-89.076H370.005z"/>
+                    <path style="fill:#0052B4;" d="M52.92,100.142c-20.109,26.163-35.272,56.318-44.101,89.077h133.178L52.92,100.142z" />
+                    <path style="fill:#0052B4;" d="M503.181,189.219c-8.829-32.758-23.993-62.913-44.101-89.076l-89.075,89.076H503.181z" />
+                    <path style="fill:#0052B4;" d="M8.819,322.784c8.83,32.758,23.993,62.913,44.101,89.075l89.074-89.075L8.819,322.784L8.819,322.784   z" />
+                    <path style="fill:#0052B4;" d="M411.858,52.921c-26.163-20.109-56.317-35.272-89.076-44.102v133.177L411.858,52.921z" />
+                    <path style="fill:#0052B4;" d="M100.142,459.079c26.163,20.109,56.318,35.272,89.076,44.102V370.005L100.142,459.079z" />
+                    <path style="fill:#0052B4;" d="M189.217,8.819c-32.758,8.83-62.913,23.993-89.075,44.101l89.075,89.075V8.819z" />
+                    <path style="fill:#0052B4;" d="M322.783,503.181c32.758-8.83,62.913-23.993,89.075-44.101l-89.075-89.075V503.181z" />
+                    <path style="fill:#0052B4;" d="M370.005,322.784l89.075,89.076c20.108-26.162,35.272-56.318,44.101-89.076H370.005z" />
                     </g>
                     <g>
-	                    <path style="fill:#D80027;" d="M509.833,222.609h-220.44h-0.001V2.167C278.461,0.744,267.317,0,256,0   c-11.319,0-22.461,0.744-33.391,2.167v220.44v0.001H2.167C0.744,233.539,0,244.683,0,256c0,11.319,0.744,22.461,2.167,33.391   h220.44h0.001v220.442C233.539,511.256,244.681,512,256,512c11.317,0,22.461-0.743,33.391-2.167v-220.44v-0.001h220.442   C511.256,278.461,512,267.319,512,256C512,244.683,511.256,233.539,509.833,222.609z"/>
-	                    <path style="fill:#D80027;" d="M322.783,322.784L322.783,322.784L437.019,437.02c5.254-5.252,10.266-10.743,15.048-16.435   l-97.802-97.802h-31.482V322.784z"/>
-	                    <path style="fill:#D80027;" d="M189.217,322.784h-0.002L74.98,437.019c5.252,5.254,10.743,10.266,16.435,15.048l97.802-97.804   V322.784z"/>
-	                    <path style="fill:#D80027;" d="M189.217,189.219v-0.002L74.981,74.98c-5.254,5.252-10.266,10.743-15.048,16.435l97.803,97.803   H189.217z"/>
-	                    <path style="fill:#D80027;" d="M322.783,189.219L322.783,189.219L437.02,74.981c-5.252-5.254-10.743-10.266-16.435-15.047   l-97.802,97.803V189.219z"/>
+                    <path style="fill:#D80027;" d="M509.833,222.609h-220.44h-0.001V2.167C278.461,0.744,267.317,0,256,0   c-11.319,0-22.461,0.744-33.391,2.167v220.44v0.001H2.167C0.744,233.539,0,244.683,0,256c0,11.319,0.744,22.461,2.167,33.391   h220.44h0.001v220.442C233.539,511.256,244.681,512,256,512c11.317,0,22.461-0.743,33.391-2.167v-220.44v-0.001h220.442   C511.256,278.461,512,267.319,512,256C512,244.683,511.256,233.539,509.833,222.609z" />
+                    <path style="fill:#D80027;" d="M322.783,322.784L322.783,322.784L437.019,437.02c5.254-5.252,10.266-10.743,15.048-16.435   l-97.802-97.802h-31.482V322.784z" />
+                    <path style="fill:#D80027;" d="M189.217,322.784h-0.002L74.98,437.019c5.252,5.254,10.743,10.266,16.435,15.048l97.802-97.804   V322.784z" />
+                    <path style="fill:#D80027;" d="M189.217,189.219v-0.002L74.981,74.98c-5.254,5.252-10.266,10.743-15.048,16.435l97.803,97.803   H189.217z" />
+                    <path style="fill:#D80027;" d="M322.783,189.219L322.783,189.219L437.02,74.981c-5.252-5.254-10.743-10.266-16.435-15.047   l-97.802,97.803V189.219z" />
                     </g>
                     </svg>
                 </div>
@@ -267,7 +267,7 @@
                                 </ul>
                                 <div class="d-flex">
 
-                                    
+
 
 
                                     <div style="width:30px; height:30px; margin-right:10px;margin-left:auto; cursor:pointer" onclick="window.open('https://t.me/+ugrIKNOeRGAzMzVi', '_blank');">
@@ -300,12 +300,12 @@
                                         <input name="searchWord" id="searchWord" style="border-radius:20px; background-color:white;width: 200px; height:30px;border-color:transparent; outline:none" />
                                         <div style="position:absolute; right:0px; top:-1px;">
                                             <a style="cursor:pointer">
-    
+
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="38" height="35" fill="none" viewBox="0 0 38 35" onclick="press()">
-                                                  <circle cx="15.862" cy="15.812" r="10.942" stroke="#CDCDCD" transform="rotate(-60 15.862 15.812)"/>
-                                                  <path stroke="#CDCDCD" d="M31.605 24.989l-5.872-3.39"/>
+                                                    <circle cx="15.862" cy="15.812" r="10.942" stroke="#CDCDCD" transform="rotate(-60 15.862 15.812)" />
+                                                    <path stroke="#CDCDCD" d="M31.605 24.989l-5.872-3.39" />
                                                 </svg>
-                                             </a>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
@@ -323,30 +323,30 @@
     </div>
     <script>
 
-    document.querySelector('#searchWord').addEventListener('keypress', function (e) {
-        if (e.key === 'Enter') {
+        document.querySelector('#searchWord').addEventListener('keypress', function (e) {
+            if (e.key === 'Enter') {
+                var url = '@Url.Action("Index", "Home")';
+                var textValue = $('#searchWord').val();
+
+                window.location.href = url + '?searchWord=' + textValue;
+            }
+        });
+
+
+        //$("#searchButton").addEventListener('keypress', function (e) {
+        //    if (e.key === 'Enter') {
+        //      alert("adasdasf");
+        //    }
+        //});
+
+        function press()
+        {
             var url = '@Url.Action("Index", "Home")';
             var textValue = $('#searchWord').val();
 
             window.location.href = url + '?searchWord=' + textValue;
         }
-    });
 
-
-    //$("#searchButton").addEventListener('keypress', function (e) {
-    //    if (e.key === 'Enter') {
-    //      alert("adasdasf");
-    //    }
-    //});
-
-    function press()
-    {
-        var url = '@Url.Action("Index", "Home")';
-        var textValue = $('#searchWord').val();
-
-        window.location.href = url + '?searchWord=' + textValue;
-    }
-    
     </script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
