--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -206,7 +206,7 @@
                                         {
                                             <li class="page-item">
                                                 <a class="page-link" href="@Url.Action("Index",
-                                                                  new {searchWord = Model.SearchWord, ChosenCategoryId  = Model.ChosenCategoryId,  page = (Model.Pager.CurrentPage + 2)
+                                                                  new {searchWord = Model.SearchWord, category  = Model.ChosenCategoryId,  page = (Model.Pager.CurrentPage + 2)
                                                                   })" value="@(Model.Pager.StartPage + 2)" aria-label="Next">
                                                     <span aria-hidden="true">»</span>
                                                     <span class="sr-only">Next</span>
