add google analytics and update configurations accordingly to new env

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -9,6 +9,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-DGET2J1N55"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-DGET2J1N55');
+    </script>
+
+
     <meta property="og:url" content="https://www.dopomoga.ge" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Dopomoga" />
@@ -18,8 +31,6 @@
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-
 
 
 
