--- a/test/Views/Identity/Posts.cshtml
+++ b/test/Views/Identity/Posts.cshtml
@@ -59,6 +59,10 @@
                                   <input type="checkbox" asp-for="ShowOnMainMenu" name="ShowOnMainMenu">
                                     <label asp-for="ShowOnMainMenu"> მთავარ გვერდზე გამოჩენა</label><br>
                             </div>
+                            <div style="padding-top:20px;padding-bottom:20px;">
+                                  <input type="checkbox" asp-for="ShowInTheEnd" name="ShowOnMainMenu">
+                                    <label asp-for="ShowInTheEnd"> ბოლოში გადატანა</label><br>
+                            </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-primary" value="Create">დამატება</button>
                             </div>
