update image url

--- a/test/Views/Shared/_Layout.cshtml
+++ b/test/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Dopomoga" />
     <meta property="og:description" content="Dopomoga" />
-    <meta property="og:image" content="https://scontent.ftbs5-2.fna.fbcdn.net/v/t39.30808-6/277584626_119767813990951_6018180667691169254_n.png?_nc_cat=104&ccb=1-7&_nc_sid=8631f5&_nc_ohc=F6ZvXYzTTYoAX-a9CVf&_nc_ht=scontent.ftbs5-2.fna&oh=00_AT8gXi8aoRKWmFKDbM5fHwYGsE4zmALo5MPwkK2P1xBpqw&oe=62B8EEAF" />
+    <meta property="og:image" content="https://i.ibb.co/nck9Hgx/277584626-119767813990951-6018180667691169254-n.png" />
 
 
     <meta charset="utf-8" />
