--- a/test/Views/Home/AboutUs.cshtml
+++ b/test/Views/Home/AboutUs.cshtml
@@ -1,10 +1,11 @@
-﻿@model test.Models.Home.SharedViewModel;
+﻿@using Microsoft.Extensions.Localization
+@model test.Models.Home.SharedViewModel;
 
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
+@inject IStringLocalizer<SharedResources> SharedLocalizer
 
 
 <div class="row" style="height:100vh;">
-
     <div class="col-md-3" style="background: #B9B9B9;">
 
         <div style="margin-top:30px;">
@@ -26,6 +27,8 @@
 
     <div class="col-md-9 bg-light" style="background: url('/content/images/background.svg') no-repeat bottom; background-position: 50% 115%;">
         <div class="container" style="margin-top:30px">
+            
+            <h1 style="text-align:center ">@SharedLocalizer["AboutUs"]</h1>
             <div class="row">
                 @if(@Model.Culture == "en")
                 {
