--- a/test/Views/Home/FAQ.cshtml
+++ b/test/Views/Home/FAQ.cshtml
@@ -1,6 +1,8 @@
-﻿@model test.Models.Home.SharedViewModel;
+﻿@using Microsoft.Extensions.Localization
+@model test.Models.Home.SharedViewModel;
 
 @inject Microsoft.AspNetCore.Mvc.Localization.IViewLocalizer localizer
+@inject IStringLocalizer<SharedResources> SharedLocalizer
 
 
 <div class="row" style="height:100vh;">
@@ -25,6 +27,7 @@
     </div>
 
     <div class="col-md-9 bg-light" style="background: url('/content/images/background.svg') no-repeat bottom; background-position: 50% 115%;">
+         <h1 style="text-align:center ">@SharedLocalizer["FAQ"]</h1>
         <div class="container" style="margin-top:30px">
             <div class="row">
                 @if(@Model.Culture == "en")
