--- a/test/Views/Home/PostInternalPage.cshtml
+++ b/test/Views/Home/PostInternalPage.cshtml
@@ -74,7 +74,7 @@
 
                         color: #626262;">ვებგვერდზე განთავსებული ინფორმაციის მოძიება და შეკრება შესაძლებელი გახდა ამერიკელი ხალხის გულუხვი დახმარების წყალობით, ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID) დაფინანსებით. ვებგვერდზე განთავსებულ მასალაზე პასუხისმგებელია მხოლოდ საინიციატივო ჯგუფი და შესაძლოა არ გამოხატავდეს ამერიკის შეერთებული შტატების საერთაშორისო განვითარების სააგენტოს (USAID), აღმოსავლეთ-დასავლეთის მართვის ინსტიტუტის (EWMI), ან ამერიკის შეერთებული შტატების მთავრობის შეხედულებებს.</p>
         </div>
-        <div class="col-md-2 justify-content-center">
+        <div class="col-md-2 justify-content-center" style="text-align:center">
             <p  style="font-family: 'Roboto';
                         font-style: normal;
                         font-weight: 400;
