--- a/test/Views/Home/Index.cshtml
+++ b/test/Views/Home/Index.cshtml
@@ -11,90 +11,6 @@
 <style>
 
 
-    * {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
-
-/* Hide the images by default */
-.mySlides {
-  display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-
     .textFont {
         font-family: FiraGo-SemiBold !important;
         font-size: 18px;
@@ -255,31 +171,77 @@
                 @if (!Model.ShowCategories)
                 {
 
+                    
+
+
+
                     <h1 style="text-align:center ">@SharedLocalizer["Home"]</h1>
                     <div class="col-md-8">
-                        @if (Model.Posts.ElementAtOrDefault(0) != null)
-                        {
-                            <div class="card-transparent mb-2">
-                                <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[0].Id})" style=" text-decoration: none;">
-                                    <img class="card-img-top main-card-size" src="data:image/png;base64,@Model.Posts[0].ThumbnailBase64" alt="Card image cap">
-                                    <div class="card-body">
-                                        @if (Model.Culture == "uk")
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[0].UkrainianTitle</b></p>
-                                        }
-                                        else
-                                        {
-                                            <p class="textFont"><b>@Model.Posts[0].GeorgianTitle</b></p>
-                                        }
-                                    </div>
-                                </a>
+                        <!-- Slideshow container -->
+                    <div class="slideshow-container">
+
+                        <!-- Full-width images with number and caption text -->
+                        <div class="mySlides fade">
+                            <div class="numbertext">1 / 3</div>
+                            <img src="data:image/png;base64,@Model.Posts[0].ThumbnailBase64" style="width:100%">
+                            <div class="text">
+                                @if (Model.Culture == "uk")
+                                {
+                                    <p class="textFont"><b>@Model.Posts[0].UkrainianTitle</b></p>
+                                }
+                                else
+                                {
+                                    <p class="textFont"><b>@Model.Posts[0].GeorgianTitle</b></p>
+                                }
                             </div>
-                        }
+                        </div>
+
+                        <div class="mySlides fade">
+                            <div class="numbertext">2 / 3</div>
+                            <img src="data:image/png;base64,@Model.Posts[1].ThumbnailBase64" style="width:100%">
+                            <div class="text">
+                                 @if (Model.Culture == "uk")
+                                {
+                                    <p class="textFont"><b>@Model.Posts[1].UkrainianTitle</b></p>
+                                }
+                                else
+                                {
+                                    <p class="textFont"><b>@Model.Posts[1].GeorgianTitle</b></p>
+                                }
+                            </div>
+                        </div>
+
+                        <div class="mySlides fade">
+                            <div class="numbertext">3 / 3</div>
+                            <img src="data:image/png;base64,@Model.Posts[2].ThumbnailBase64" style="width:100%">
+                            <div class="text"> 
+                                @if (Model.Culture == "uk")
+                                {
+                                    <p class="textFont"><b>@Model.Posts[2].UkrainianTitle</b></p>
+                                }
+                                else
+                                {
+                                    <p class="textFont"><b>@Model.Posts[2].GeorgianTitle</b></p>
+                                }</div>
+                        </div>
+
+                        <!-- Next and previous buttons -->
+                        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    </div>
+                    <br>
+
+                    <!-- The dots/circles -->
+                    <div style="text-align:center">
+                        <span class="dot" onclick="currentSlide(1)"></span>
+                        <span class="dot" onclick="currentSlide(2)"></span>
+                        <span class="dot" onclick="currentSlide(3)"></span>
+                    </div>
 
                     </div>
                     <div class="col-md-4">
 
-                        @if (Model.Posts.ElementAtOrDefault(1) != null)
+                        @*@if (Model.Posts.ElementAtOrDefault(1) != null)
                         {
                             <div class="card-transparent mb-2">
                                 <a href="@Url.Action("PostInternalPage", "Home", new { id = @Model.Posts[1].Id})" style=" text-decoration: none; color:black;">
@@ -314,7 +276,7 @@
                                     </div>
                                 </a>
                             </div>
-                        }
+                        }*@
 
                         <div class="card-transparent mb-2" style="margin-top:20px;">
                             <a href="@Url.Action("Index", "Home", new {category = 47, page = 1})" style=" text-decoration: none;">
@@ -543,38 +505,35 @@
         }
       });
     }
+</script>
 
-
-        let slideIndex = 1;
+<script>
+    let slideIndex = 1;
     showSlides(slideIndex);
 
     // Next/previous controls
     function plusSlides(n) {
-      showSlides(slideIndex += n);
+        showSlides(slideIndex += n);
     }
 
     // Thumbnail image controls
     function currentSlide(n) {
-      showSlides(slideIndex = n);
+        showSlides(slideIndex = n);
     }
 
     function showSlides(n) {
-      let i;
-      let slides = document.getElementsByClassName("mySlides");
-      let dots = document.getElementsByClassName("dot");
-      if (n > slides.length) {slideIndex = 1}
-      if (n < 1) {slideIndex = slides.length}
-      for (i = 0; i < slides.length; i++) {
-        slides[i].style.display = "none";
-      }
-      for (i = 0; i < dots.length; i++) {
-        dots[i].className = dots[i].className.replace(" active", "");
-      }
-      slides[slideIndex-1].style.display = "block";
-      dots[slideIndex-1].className += " active";
+        let i;
+        let slides = document.getElementsByClassName("mySlides");
+        let dots = document.getElementsByClassName("dot");
+        if (n > slides.length) { slideIndex = 1 }
+        if (n < 1) { slideIndex = slides.length }
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
     }
-
-
-
-
 </script>
