--- a/test/Views/Home/Contacts.cshtml
+++ b/test/Views/Home/Contacts.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row" style="height:100vh;">
 
-    <div class="col-md-3" style="background: #B9B9B9;">
+    <div class="col-md-3" style="background: #B9B9B9;" id="CategoriesDiv">
         
         <div style="margin-top:30px;">
         @foreach (var category in Model.Categories)
@@ -106,6 +106,12 @@
         $("#contactsP").css("color", "#F8BF0C");
         $("#aboutUsP").css("color", "white");
         $('#load').hide();
+
+
+        if(window.innerWidth < 1000)
+        {
+            $("#CategoriesDiv").hide();
+        }
 
     };
 
